--- a/src/components/placeList/placeList.scss
+++ b/src/components/placeList/placeList.scss
@@ -1,14 +1,11 @@
-.handle {
-  width: 35px;
-  height: 35px;
-
-  // border: 1px solid rgba(1, 0, 2, .5);
-  // border-radius: 5%;
-  display: flex;
+.place-list {
+  margin-top: 20px;
+  display: grid;
+  // grid-template-columns: repeat(4, 1fr);
+  // gap: 10px;
+  gap: 10% 2%;
   justify-content: center;
-  align-items: center;
-  font-size: 24px;
-  cursor: pointer;
+  justify-items: center;
   &_solved {
     animation-duration: 2s;
     animation-name: flash;
@@ -16,6 +13,15 @@
   &_not-solved {
     animation-duration: 1.2s;
     animation-name: shakeX;
+  }
+  &__item {
+    // width: 50px;
+    // height: 50px;
+    width: 100%;
+    padding-top: 50%;
+    padding-bottom: 50%;
+    border: 1px solid rgba(1, 0, 2, .5);
+    border-radius: 5%;
   }
 }
 
