--- a/src/components/targetList/targetList.scss
+++ b/src/components/targetList/targetList.scss
@@ -1,9 +1,8 @@
 .target-list {
-  display: block;
-  height: 50px;
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   &__item {
-    position: absolute;
     width: 50px;
     height: 50px;
     border: 1px solid rgba(1, 0, 2, .5);
