--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 }
 
 @media (max-width: 768px) {
-  .wrapper {
+  .wrapper, .upper-line {
     max-width: 100%;
   }
 }
@@ -23,9 +23,15 @@ body {
 
 .container {
   width: 100%;
+  min-height: 100vh;
   padding-right: 15px;
   padding-left: 15px;
   margin: 0 auto;
+}
+
+.upper-line {
+  display: flex;
+  justify-content: flex-end;
 }
 
 @media (min-width: 576px) {
